# ueye-cmake

./: .gitignore  FinduEye-SDK.cmake  README.md
.github/workflows/: test.yaml
test/: CMakeLists.txt  test.cpp
